--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,7 @@ dependencies = [
     "keyboard>=0.13.3",
     "pygame>=2.1.2",
     "wcwidth>=0.1.7",
-    "windows-curses>=2.2.0"
+    'windows-curses>=2.2.0; platform_system == "Windows"'
 ]
 requires-python = ">=3.8"
 readme = "README.md"
