--- a/requirements.txt
+++ b/requirements.txt
@@ -3,5 +3,5 @@ jinxed>=1.1.0
 keyboard>=0.13.3
 pygame>=2.1.2
 wcwidth>=0.1.7
-windows-curses>=2.2.0
+windows-curses>=2.2.0; platform_system == "Windows"
 types_setuptools>=80.9.0
