disabled some alerts from the workflow

--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -30,7 +30,7 @@ jobs:
 
         - name: Run Pylint
           run: |
-            pylint tetr_cli
+            pylint --disable=R0801 tetr_cli
 
         - name: Run Flake8
           run: |
