--- a/.github/workflows/linting.yml
+++ b/.github/workflows/linting.yml
@@ -1,4 +1,4 @@
-name: Linting with Pylint and Flake8
+name: Linting with Flake8
 
 on:
   push:
@@ -27,10 +27,6 @@ jobs:
             python -m pip install --upgrade pip
             pip install pylint flake8
             pip install -r requirements.txt
-
-        - name: Run Pylint
-          run: |
-            pylint --disable=R0801 tetr_cli
 
         - name: Run Flake8
           run: |
